--- a/app.json
+++ b/app.json
@@ -13,7 +13,20 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "associatedDomains": [
+        "com.pjf1822.BitchButton"
+      ],
+      "infoPlist": {
+        "CFBundleURLTypes": [
+          {
+            "CFBundleURLSchemes": [
+              "bitchButton"
+            ]
+          }
+        ]
+      },
+      "bundleIdentifier": "com.pjf1822.BitchButton"
     },
     "android": {
       "adaptiveIcon": {
@@ -31,6 +44,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "d60ee586-adbe-425a-898b-f4ff0e7ebd66"
+      }
     }
   }
 }
