--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "react-query": "^3.39.3",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "@react-native-picker/picker": "2.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
