--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.23",
     "expo-av": "~14.0.6",
@@ -36,10 +37,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.5.0",
     "react-native-web": "~0.19.10",
     "react-query": "^3.39.3",
-    "zustand": "^4.5.4",
-    "@react-native-picker/picker": "2.7.5"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
