--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native": "0.74.3",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "~3.10.1",
+    "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.5.0",
