--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-svg": "^15.5.0",
     "react-native-web": "~0.19.10",
     "react-query": "^3.39.3",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "expo-updates": "~0.25.23"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
