--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.23",
@@ -27,12 +28,14 @@
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.23",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.4",
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-modal": "^13.0.1",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-root-toast": "^3.6.0",
@@ -41,8 +44,7 @@
     "react-native-svg": "^15.5.0",
     "react-native-web": "~0.19.10",
     "react-query": "^3.39.3",
-    "zustand": "^4.5.4",
-    "expo-updates": "~0.25.23"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
