--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.5.0",
     "react-native-web": "~0.19.10",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "expo-clipboard": "~6.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
